# back/docs/swagger.json
@@ -538,6 +538,145 @@
                 }
             }
         },
+        "/submissions": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create a new submission for a step",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "submissions"
+                ],
+                "summary": "Create a new submission",
+                "parameters": [
+                    {
+                        "description": "Submission object to create",
+                        "name": "submission",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SubmissionCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Submission created successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controllers.JSONResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Submission"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/submissions/upload": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Uploads a file to Google Cloud Storage for a submission",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "submissions"
+                ],
+                "summary": "Upload a file for a submission",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "File uploaded successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controllers.JSONResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "url": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/teams": {
             "get": {
                 "security": [
@@ -1233,6 +1372,48 @@
                 }
             }
         },
+        "models.Evaluation": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "note": {
+                    "type": "integer"
+                },
+                "team": {
+                    "description": "Belongs to Team",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Team"
+                        }
+                    ]
+                },
+                "teamID": {
+                    "description": "Foreign key referencing Team.ID",
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userID": {
+                    "description": "Foreign key referencing User.ID, column name as \"author_id\"",
+                    "type": "integer"
+                }
+            }
+        },
         "models.File": {
             "type": "object",
             "properties": {
@@ -1546,6 +1727,70 @@
                 }
             }
         },
+        "models.Submission": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "evaluation": {
+                    "$ref": "#/definitions/models.Evaluation"
+                },
+                "evaluation_id": {
+                    "type": "integer"
+                },
+                "git_link": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "step": {
+                    "$ref": "#/definitions/models.Step"
+                },
+                "step_id": {
+                    "type": "integer"
+                },
+                "team": {
+                    "$ref": "#/definitions/models.Team"
+                },
+                "team_id": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubmissionCreate": {
+            "type": "object",
+            "properties": {
+                "evaluation": {
+                    "$ref": "#/definitions/models.Evaluation"
+                },
+                "evaluation_id": {
+                    "type": "integer"
+                },
+                "git_link": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "team": {
+                    "$ref": "#/definitions/models.Team"
+                },
+                "team_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Team": {
             "type": "object",
             "required": [
@@ -1557,6 +1802,18 @@
                 },
                 "deletedAt": {
                     "type": "string"
+                },
+                "evaluation": {
+                    "description": "Relation avec Evaluation",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Evaluation"
+                        }
+                    ]
+                },
+                "evaluation_id": {
+                    "description": "Ajout de l'EvaluationID",
+                    "type": "integer"
                 },
                 "hackathon": {
                     "$ref": "#/definitions/models.Hackathon"
