# back/models/Submission.go
@@ -11,3 +11,12 @@ type Submission struct {
 	StepID       uint       `json:"step_id"`
 	Step         Step       `json:"step"`
 }
+
+type SubmissionCreate struct {
+	TeamID       uint       `json:"team_id"`
+	Team         Team       `json:"team"`
+	EvaluationID uint       `json:"evaluation_id"`
+	Evaluation   Evaluation `json:"evaluation"`
+	Status       string     `json:"status"`
+	GitLink      string     `json:"git_link"`
+}
